# mathematishia

./: README.md  pyproject.toml  setup.py  test.py
mathematishia/: __init__.py  test.py
mathematishia/interpreter/: interpreter.py
mathematishia/nodes/: __init__.py  algebraic_term.py  base.py  binary_operator.py  function.py  number.py  parenthesis.py  unary_operator.py
mathematishia/parsing/: __init__.py  _parser.py  latex2ascii.py  lexer.py  tokens.py
tests/: import_test.py  simplify_test.py
