[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathematishia"
version = "0.0.1"
authors = [
  { name="RezSat(Yehan Wasura)", email="wasurayehan@gmail.com" },
]
description = "A Computer Algebra Sytem, which computes step-by-step solutions for math problems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: "GNU GPL"
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RezSat/mathematishia"
"Bug Tracker" = "https://github.com/RezSat/mathematishia/issues"